сверстан блок наши услуги

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Окна Хаус</title>
     <link rel="stylesheet" href="css/./reset.css">
     <link rel="stylesheet" href="css/./base.css">
+    <link rel="stylesheet" href="css/./body.css">
     <link rel="stylesheet" href="css/./header.css">
 </head>
-<body>
+<body class="body">
     <header class="header">
         <div class="container header-wrapper">
             <img src="./images/logo1.svg" alt="Logo">
@@ -35,20 +36,72 @@
             </nav>
             <div class="buttons-list">
                 <button class="btn">
-                    <img class="btn-icon" src="./images/icon1.svg">
+                    <img class="btn-icon" src="./images/header_icon1.svg">
                     Заявка на замер
                 </button>
                 <button class="btn btn-black">
-                    <img class="btn-icon" src="./images/icon2.svg">
+                    <img class="btn-icon" src="./images/header_icon2.svg">
                     Заказать расчет
                 </button>
             </div>
         </div>
     </header>
-    <section class="container">
-        <title>
 
-        </title>
+    <section class="container">
+        <h2 class="services-title">Наши услуги</h2>
+        <div class="services_block">
+            <div class="service_item" style="background-image: url(./images/background-1.png)">
+                <div class="service_content">
+                   <div class="service_header">
+                        <img class="service_icon" src="./images/icon1.svg" alt="Block_icon1" >
+                        <h3 class="service_title">Установка <br> пластиковых окон</h3>
+                   </div>
+                    <p class="service_text">
+                        Устанавливаем пластиковые окна Rehau от проверенного производителя с гарантией качества
+                    </p>
+                </div>
+            </div>
+            <div class="service_item" style="background-image: url(./images/background-2.png)">
+                <div class="service_content">
+                    <div class="service_header">
+                        <img class="service_icon" src="./images/icon2.svg" alt="Block_icon2" >
+                        <h3 class="service_title">Остекление балконов <br> и лоджий</h3>
+                    </div>
+                    <p class="service_text">
+                        Занимаемся остеклением и отделкой балконов и лоджий. Теплое и холодное остекление,
+                        изготовление выносов и крыш. Беремся за сложные объекты
+                    </p>
+                </div>
+            </div>
+            <div class="service_item" style="background-image: url(./images/background-3.png)">
+                <div class="service_content">
+                    <div class="service_header">
+                        <img class="service_icon" src="./images/icon3.svg" alt="Block_icon3" >
+                        <h3 class="service_title">Остекление <br> коттеджей и дач</h3>
+                    </div>
+                    <p class="service_text">
+                        Остекление и отделка под ключ: <br> от коттеджей и дач до террас <br> и беседок.
+                        Выделяем личного технолога под каждый объект
+                    </p>
+                </div>
+            </div>
+            <div class="service_item" style="background-image: url(./images/background-4.png)">
+                <div class="service_content">
+                    <div class="service_header">
+                        <img class="service_icon" src="./images/icon4.svg" alt="Block_icon4" >
+                        <h3 class="service_title">Остекление корпоративных объектов</h3>
+                    </div>
+                    <p class="service_text">
+                        Реализуем сложные проекты по остеклению торговых центров, ресторанов, производственных
+                        помещений и офисов
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </section>
+
+
+
 </body>
 </html>
