Добавлено выделение меню цветом при наведении, исправлены мелкие недочеты

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                 <li class="about-menu__item">
                     <a href="" class="about-menu__link">Как мы работаем</a>
                 </li>
-                <li class="list-item">
+                <li class="about-menu__item">
                     <a href="" class="about-menu__link">Отзывы</a>
                 </li>
-                <li class="list-item">
+                <li class="about-menu__item">
                     <a href="" class="about-menu__link">Сертификаты</a>
                 </li>
             </ul>
