Сверстан блок Портфолио, Вопрос-ответ, применет hover к ссылкам и кнопкам, адаптированы блоки

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/./prof-approac.css">
     <link rel="stylesheet" href="css/./body.css">
     <link rel="stylesheet" href="css/./header.css">
+    <link rel="stylesheet" href="css/./portfolio.css">
 </head>
 <body class="body">
     <header class="header">
@@ -150,7 +151,6 @@
                 </div>
             </div>
         </div>
-
     </section>
     <section class="container">
         <h2 class="services-title">О компании</h2>
@@ -221,7 +221,50 @@
                 <span>Оформить заявку на замер</span>
             </button>
         </div>
+    </section>
+    <section class="container">
+        <div class="portfolio">
+            <div class="portfolio-title">
+                <h3 class="portfolio-h3">Портфолио</h3>
+            </div>
+            <div class="portfolio-windows">
+                <img src="./images/window1.png" alt="Window1" class="portfolio_img">
+                <img src="./images/window2.jpeg" alt="Window2" class="portfolio_img">
+                <img src="./images/window3.png" alt="Window3" class="portfolio_img">
+                <img src="./images/window4.png" alt="Window4" class="portfolio_img portfolio_img_none">
+            </div>
+        </div>
+         <div class="faq">
+             <h3 class="faq_title">Вопрос - ответ</h3>
+             <div class="details-block">
+                 <details>
+                     <summary class="details-question">Сколько по времени занимает изготовление пластиковых окон?</summary>
+                     <p class="details-answer">От 2х до 7 дней</p>
+                 </details>
+                 <details>
+                     <summary class="details-question">Какие существуют способы оплаты?</summary>
+                     <p class="details-answer">Наличный, безналичный расчет, банковский перевод</p>
+                 </details>
+                 <details>
+                     <summary class="details-question">Где я могу посмотреть образцы?</summary>
+                     <p class="details-answer">В нашем офисе и на сайте.</p>
+                 </details>
+                 <details>
+                     <summary class="details-question">Зачем вызывать замерщика? Я могу дать размеры</summary>
+                     <p class="details-answer">Для более точного определения размера окон.</p>
+                 </details>
+                 <details>
+                     <summary class="details-question">Хотелось бы отделать балкон. Поможете?</summary>
+                     <p class="details-answer">Конечено, наши менеджеры помогут спроектировать остекленение.</p>
+                 </details>
+                 <details>
+                     <summary class="details-question">Мне надо нанимать грузчиков для подъема?</summary>
+                    <p class="details-answer">Нет, команда мастеров все сами аккуратно доставят и внесут.</p>
+                 </details>
+             </div>
 
+
+         </div>
     </section>
 
     <footer class="footer">
