Сверстан макет страницы на разрешения 1920px,992px, 540px. Решена проблема корректного отображения фото, добавлен hover на элементы.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Сайт-визитка</title>
+<!--    meta тег для того чтобы считались нормально размеры в моб. версии-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--    <link rel="preconnect" href="https://fonts.googleapis.com">-->
 <!--    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
 <!--    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">-->
@@ -13,7 +15,7 @@
 </head>
 <body class="container">
     <div class="foto">
-        <img src="./images/foto.jpg" alt="Ivanov" class="foto__img">
+        <img src="./images/foto_new.png" alt="Ivanov" class="foto__img">
         <p class="developer">разработчик</p>
     </div>
 
@@ -64,9 +66,14 @@
         </ul>
         <div class="info-about-me">
             <h2>О себе:</h2>
-            <p> &nbsp;&nbsp;&nbsp;Лучший программист всех времен. Взломаю Пентагон, сверстаю сайт, поправлю кнопочку на 1 рх влево.
-                Готов работать 24/7.<br>&nbsp;&nbsp;&nbsp;В свободное время учу английский, китайский. Играю в игры. Люблю бутерброды
-                с колбасой и сыром.</p>
+            <p>
+                Лучший программист всех времен. Взломаю Пентагон, сверстаю сайт, поправлю кнопочку на 1 рх влево.
+                Готов работать 24/7.
+            </p>
+            <p>
+                В свободное время учу английский, китайский. Играю в игры. Люблю бутерброды
+                с колбасой и сыром.
+            </p>
         </div>
         <div class="info-feedback">
             <div class="info__input">
