Добавлена информация в footer, добален media для блоков footer, "О компании"

--- a/index.html
+++ b/index.html
@@ -268,6 +268,16 @@
     </section>
 
     <footer class="footer">
+        <div class="footer-info">
+            <div class="footer-logo">
+                <img class="logo" src="./images/logo_footer.svg" alt="Logo">
+                <p>© ООО “Окна Хаус”, 2011 - 2022</p>
+            </div>
+            <div class="footer-links">
+                <a href="" class="footer-link">Политика кофиденциальности</a>
+                <a href="" class="footer-link">Пользовательское соглашение</a>
+            </div>
+        </div>
 
     </footer>
 
